--- a/views/components/mainHeader/mainHeader.ejs
+++ b/views/components/mainHeader/mainHeader.ejs
@@ -1,13 +1,19 @@
 <header class="main-header">
 	<nav class="main-header__nav">
 		<% include ../logoContainer/logoContainer.ejs %>
-		<div class="eyecandy">
-			<div class="square">
-				
+			<div class="eyecandy">
+				<div class="hexagon">
+					<img src="./images/hexagon.png" alt="">
+				</div>
+				<div class="triangle">
+					<img src="./images/triangle.png" alt="">
+				</div>
+				<div class="square">
+
+				</div>
 			</div>
-		</div>
-		<ul>
-			<!-- <li><a href="">Contact me</a></li> -->
-		</ul>
+			<ul>
+				<!-- <li><a href="">Contact me</a></li> -->
+			</ul>
 	</nav>
 </header>
