--- a/views/components/workGrid/workGrid.ejs
+++ b/views/components/workGrid/workGrid.ejs
@@ -1,8 +1,10 @@
 <section class="workgrid">
-	<h1 class="workgrid__underline">My Work</h1>
-	<figure>
-		<img src="./images/working.svg" alt="">
-	</figure>
+	<div class="workgrid__intro">
+		<h1 class="workgrid__underline">My Work</h1>
+		<figure>
+			<img src="./images/working.svg" alt="">
+		</figure>
+	</div>
 	<ul class="workgrid__container">
 		<li>
 			<a href="">
