--- a/views/components/_base/base.css
+++ b/views/components/_base/base.css
@@ -16,7 +16,13 @@ body {
 	top: 20%;
 	left: 50%;
 	transform: translate(-50%,-50%);
-	filter: blur(2px);
+}
+
+.hexagon {
+	margin-right: 2rem;
+	filter: blur(4px);
+	display: inline-block;
+	animation: rotate 15s linear infinite alternate-reverse forwards;
 }
 
 .square {
@@ -24,15 +30,20 @@ body {
 	width: 50px;
 	height: 50px;
 	transform: rotate(-45deg);
-	animation-name: rotate;
-	animation-duration: 15s;
-	animation-timing-function: linear;
-	/* or: Xms */
-	animation-iteration-count: infinite;
-	animation-direction: alternate;
-	/* or: normal */
-	/* or: ease, ease-in, ease-in-out, linear, cubic-bezier(x1, y1, x2, y2) */
-	animation-fill-mode: forwards;
+	animation: rotate 15s linear infinite alternate forwards;
+	filter: blur(2px);
+	margin-bottom: 4rem;
+	display: inline-block;
+}
+
+.triangle {
+	margin-right: 2rem;
+	display: inline-block;
+	margin-top: 4rem;
+	img {
+		height: 4.4rem;
+		display: inline-block;
+	}
 }
 
 @keyframes rotate {
